[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Player_Assets/player_dark.png" type="Texture" id=1]
[ext_resource path="res://Player/Player_Assets/death_02.png" type="Texture" id=2]
[ext_resource path="res://Player/Player_Assets/death_01.png" type="Texture" id=3]
[ext_resource path="res://Player/Player_Assets/death_03.png" type="Texture" id=4]
[ext_resource path="res://Player/Player_Assets/death_00.png" type="Texture" id=5]
[ext_resource path="res://Player/Player.gd" type="Script" id=6]
[ext_resource path="res://Player/Player_Assets/shoot.wav" type="AudioStream" id=7]
[ext_resource path="res://Player/Player_Assets/death.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 1.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": false,
"name": "death",
"speed": 30.0
} ]

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
light_mask = 5
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -7.04686, 6.95527, 6.99103, 6.95527, 6.99103, 2.02214, 0.932222, -7.04951, -0.921839, -7.01641, -6.98064, 1.98903 )

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="finished" from="DeathSound" to="." method="_on_DeathSound_finished"]
